crates/pg_syntax/tests/snapshots/postgres_regress/json@212.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create domain j_ordered_pair as j_unordered_pair check((value).x <= (value).y);
---
CreateDomainStmt@0..79
  Create@0..6 "create"
  Whitespace@6..7 " "
  DomainP@7..13 "domain"
  Whitespace@13..14 " "
  Ident@14..28 "j_ordered_pair"
  Whitespace@28..29 " "
  As@29..31 "as"
  Whitespace@31..32 " "
  TypeName@32..48
    Ident@32..48 "j_unordered_pair"
  Whitespace@48..49 " "
  Constraint@49..77
    Check@49..54 "check"
    Ascii40@54..55 "("
    Ascii40@55..56 "("
    AExpr@56..77
      AIndirection@56..64
        ColumnRef@56..61
          ValueP@56..61 "value"
        Ascii41@61..62 ")"
        Ascii46@62..63 "."
        Ident@63..64 "x"
      Whitespace@64..65 " "
      LessEquals@65..67 "<="
      Whitespace@67..68 " "
      Ascii40@68..69 "("
      AIndirection@69..77
        ColumnRef@69..74
          ValueP@69..74 "value"
        Ascii41@74..75 ")"
        Ascii46@75..76 "."
        Ident@76..77 "y"
  Ascii41@77..78 ")"
  Ascii59@78..79 ";"

