crates/pg_syntax/tests/snapshots/postgres_regress/json@219.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_populate_record(null::jpop,'{\"a\":[100,200,false],\"x\":43.2}') q;"
---
SelectStmt@0..82
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..81
    List@14..78
      FuncCall@14..78
        Ident@14..34 "json_populate_record"
        Ascii40@34..35 "("
        TypeCast@35..45
          AConst@35..39
            NullP@35..39 "null"
          Typecast@39..41 "::"
          TypeName@41..45
            Ident@41..45 "jpop"
        Ascii44@45..46 ","
        AConst@46..78
          Sconst@46..78 "'{\"a\":[100,200,false] ..."
    Ascii41@78..79 ")"
    Whitespace@79..80 " "
    Alias@80..81
      Ident@80..81 "q"
  Ascii59@81..82 ";"

