crates/pg_syntax/tests/snapshots/postgres_regress/json@220.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from json_populate_record(row('x',3,'2012-12-31 15:30:56')::jpop,'{\"a\":[100,200,false],\"x\":43.2}') q;"
---
SelectStmt@0..110
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeFunction@14..109
    List@14..106
      FuncCall@14..106
        Ident@14..34 "json_populate_record"
        Ascii40@34..35 "("
        TypeCast@35..73
          RowExpr@35..66
            Row@35..38 "row"
            Ascii40@38..39 "("
            AConst@39..42
              Sconst@39..42 "'x'"
            Ascii44@42..43 ","
            AConst@43..44
              Iconst@43..44 "3"
            Ascii44@44..45 ","
            AConst@45..66
              Sconst@45..66 "'2012-12-31 15:30:56'"
          Ascii41@66..67 ")"
          Typecast@67..69 "::"
          TypeName@69..73
            Ident@69..73 "jpop"
        Ascii44@73..74 ","
        AConst@74..106
          Sconst@74..106 "'{\"a\":[100,200,false] ..."
    Ascii41@106..107 ")"
    Whitespace@107..108 " "
    Alias@108..109
      Ident@108..109 "q"
  Ascii59@109..110 ";"

