crates/pg_syntax/tests/snapshots/postgres_regress/json@223.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT i FROM json_populate_record(NULL::jsrec_i_not_null, '{\"x\": 43.2}') q;"
---
SelectStmt@0..76
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      Ident@7..8 "i"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..75
    List@14..72
      FuncCall@14..72
        Ident@14..34 "json_populate_record"
        Ascii40@34..35 "("
        TypeCast@35..57
          AConst@35..39
            NullP@35..39 "NULL"
          Typecast@39..41 "::"
          TypeName@41..57
            Ident@41..57 "jsrec_i_not_null"
        Ascii44@57..58 ","
        Whitespace@58..59 " "
        AConst@59..72
          Sconst@59..72 "'{\"x\": 43.2}'"
    Ascii41@72..73 ")"
    Whitespace@73..74 " "
    Alias@74..75
      Ident@74..75 "q"
  Ascii59@75..76 ";"

